--- a/src/app/components/filters/filters.component.html
+++ b/src/app/components/filters/filters.component.html
@@ -1,3 +1,7 @@
+<div class="mx-2">
+    <aside class="mt-3 pt-5">
+        <h4>Scegli per</h4>
+        <br>
 <div id="accordion" ngbAccordion #accordion="ngbAccordion">
     <div id="categorie" class="container p-0" ngbAccordionItem="categorie">
         <h2 ngbAccordionHeader>
@@ -17,19 +21,19 @@
             <div ngbAccordionBody>
                 <div>
                     <div class="form-check mb-1">
-                        <input class="form-check-input" type="checkbox" value="" id="low" [(ngModel)]="lowPrice" (change)="onPriceFilterChange()">
+                        <input class="form-check-input" type="checkbox" id="low" value=""  [(ngModel)]="lowPrice" (change)="onPriceFilterChange()">
                         <label class="form-check-label text-secondary" for="low">
                           Inferiore a 100€
                         </label>
                       </div>
                       <div class="form-check mb-1">
-                        <input class="form-check-input" type="checkbox" value="" id="medium" [(ngModel)]="mediumPrice" (change)="onPriceFilterChange">
+                        <input class="form-check-input" type="checkbox" id="medium" value="" [(ngModel)]="mediumPrice" (change)="onPriceFilterChange()">
                         <label class="form-check-label text-secondary" for="medium">
                           100€ - 150€
                         </label>
                       </div>
                       <div class="form-check mb-1">
-                        <input class="form-check-input" type="checkbox" value="" id="high" [(ngModel)]="highPrice" (change)="onPriceFilterChange">
+                        <input class="form-check-input" type="checkbox" id="high" value="" [(ngModel)]="highPrice" (change)="onPriceFilterChange()">
                         <label class="form-check-label text-secondary" for="high">
                           Superiore a 150€
                         </label>
@@ -48,4 +52,6 @@
             </div>
         </div>
     </div>
+</div>
+</aside>
 </div>
