--- a/src/app/components/color-label/color-label.component.html
+++ b/src/app/components/color-label/color-label.component.html
@@ -1,4 +1,5 @@
-<div class="color-label" (click)="selectColor(color.name)" [style.background]="color.code"></div>
+    <div class="color-label" (click)="selectColor(color.name)" [style.background]="color.code">
+    </div>
 
 
 
