--- a/src/app/components/color-label/color-label.component.css
+++ b/src/app/components/color-label/color-label.component.css
@@ -1,9 +1,10 @@
 .color-label {
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     display: inline-block; /* Consente di posizionare l'etichetta su una riga */
     cursor: pointer;
-    margin-right: 5px;
+    border: 1px solid #e1e1e1;
+    margin: 5px;
   }
   
