--- a/src/app/components/color-label/color-label.component.css
+++ b/src/app/components/color-label/color-label.component.css
@@ -7,4 +7,11 @@
     border: 1px solid #e1e1e1;
     margin: 5px;
   }
-  
+
+  @media screen and (max-width: 768px) {
+    .color-label {
+        width: 22px;
+        height: 22px;
+        margin: 2px;
+      }
+}
