--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -271,7 +271,7 @@
         <input class="searchbar" type="text" [(ngModel)]="query" (keyup.enter)="onChange()" placeholder="Cerca per nome">
         <div class="icon-container">
             <div class="icon"><a href="preferiti"><img src="../../../assets/icons/wishlist.png" alt=""></a></div>
-            <div class="icon"><a href=""><img src="../../../assets/icons/carrello.png" alt="carrello"></a></div>
+            <div class="icon"><a routerLink="/cart"><img src="../../../assets/icons/carrello.png" alt="carrello"></a></div>
             <div class="icon"><a href=""><img src="../../../assets/icons/account.png" alt="account"></a></div>
         </div>
     </div>
