--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -32,7 +32,16 @@ padding: 20px 20px 10px 20px;
 }
 
 #cart-items {
-    width: 35%;
+    border: red solid 1px;
+}
+
+.cart-item-img {
+    width: 70px;
+    margin-right: 1em;
+}
+
+.cart-item-img img {
+    max-width: 100%;
 }
 
 #cart-right-summary {
