--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -8,6 +8,25 @@
             </div>
             <div id="cart-items" class="p-1">
                 <h4>Carrello</h4>
+                <div *ngIf="products">
+                    <ng-container *ngFor="let p of products">
+                        <div class="cart-item d-flex">
+                            <div class="cart-item-img">
+                                <img [src]="p.immagine" alt="">
+                            </div>
+                            <div class="d-flex justify-content-between">
+                                <div class="subMiddleText flex-grow-1">
+                                    <h5>{{ p.nome }}</h5>
+                                    <p class="text-muted">{{ p.categoria }}</p>
+                                </div>
+                                <div class="cart-item-price">
+                                    <p>{{ p.prezzo | localCurrency: 'EUR' }}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </ng-container>
+                </div>
+                
             </div>
         </div>
         <div id="cart-right-summary">
