--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -8,16 +8,62 @@
             </div>
             <div id="cart-items" class="p-1">
                 <h4>Carrello</h4>
+                <ng-container *ngIf="products.length === 0">
+                    <p class="fs-6 ps-3">Nel tuo carrello non sono presenti articoli.</p>
+                </ng-container>
                 <div *ngIf="products">
-                    <ng-container *ngFor="let p of products">
+                    <ng-container *ngFor="let p of products; let i = index">
                         <div class="cart-item d-flex">
-                            <div class="cart-item-img">
+                            <div class="cart-item-img-shop">
                                 <img [src]="p.immagine" alt="">
+                                <p class="mt-3 lh-lg">Ritiro gratuito<br>
+                                <a href="#">Trova un negozio</a></p>
                             </div>
-                            <div class="d-flex justify-content-between">
-                                <div class="subMiddleText flex-grow-1">
+                            <div class="cart-items-info d-flex justify-content-between">
+                                <div class="flex-grow-1">
                                     <h5>{{ p.nome }}</h5>
                                     <p class="text-muted">{{ p.categoria }}</p>
+                                    <div class="select-group d-flex">
+                                        <select class="form-select me-3" aria-label="Default select example">
+                                            <option selected>Taglia/misura</option>
+                                            <option value="1">EU 36</option>
+                                            <option value="2">EU 37</option>
+                                            <option value="3">EU 38</option>
+                                            <option value="4">EU 39</option>
+                                            <option value="5">EU 40</option>
+                                            <option value="6">EU 41</option>
+                                            <option value="7">EU 42</option>
+                                            <option value="8">EU 43</option>
+                                            <option value="9">EU 44</option>
+                                            <option value="10">EU 45</option>
+                                            <option value="11">EU 46</option>
+                                            <option value="12">EU 47</option>
+                                            <option value="13">EU 48</option>
+                                          </select>
+                                          <select class="form-select" aria-label="Default select example">
+                                            <option>Quantità</option>
+                                            <option selected value="1">1</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                          </select>
+                                    </div>
+                                    <div class="cart-item-icons mt-4 ps-2 d-flex">
+                                        <a href="#" title="confezione regalo">
+                                            <div class="gift">
+                                                <i class="bi bi-gift"></i>
+                                            </div>
+                                        </a>
+                                        <a href="#" title="preferiti">
+                                            <div class="wish">
+                                                <i class="bi bi-heart"></i>
+                                            </div>
+                                        </a>
+                                        <a routerLink="/cart" title="elimina">
+                                            <div class="delete" (click)="removeFromCart(i)">
+                                                <i class="bi bi-trash3"></i>
+                                            </div>
+                                        </a>
+                                    </div>
                                 </div>
                                 <div class="cart-item-price">
                                     <p>{{ p.prezzo | localCurrency: 'EUR' }}</p>
@@ -26,7 +72,7 @@
                         </div>
                     </ng-container>
                 </div>
-                
+                <hr>
             </div>
         </div>
         <div id="cart-right-summary">
