--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -8,9 +8,12 @@
             </div>
             <div id="cart-items" class="p-1">
                 <h4>Carrello</h4>
+                <!-- <ng-container #loading *ngIf="products && products.length === 0">
+                    <app-spinner></app-spinner>
+                </ng-container>
                 <ng-container *ngIf="products.length === 0">
                     <p class="fs-6 ps-3">Nel tuo carrello non sono presenti articoli.</p>
-                </ng-container>
+                </ng-container> -->
                 <div *ngIf="products">
                     <ng-container *ngFor="let p of products; let i = index">
                         <div class="cart-item d-flex">
