--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -8,12 +8,9 @@
             </div>
             <div id="cart-items" class="p-1">
                 <h4>Carrello</h4>
-                <!-- <ng-container #loading *ngIf="products && products.length === 0">
-                    <app-spinner></app-spinner>
-                </ng-container>
                 <ng-container *ngIf="products.length === 0">
-                    <p class="fs-6 ps-3">Nel tuo carrello non sono presenti articoli.</p>
-                </ng-container> -->
+                    <p class="noResult">Nel tuo carrello non sono presenti articoli.</p>
+                </ng-container>
                 <div *ngIf="products">
                     <ng-container *ngFor="let p of products; let i = index">
                         <div class="cart-item d-flex">
@@ -26,9 +23,12 @@
                                 <div class="flex-grow-1">
                                     <h5>{{ p.nome }}</h5>
                                     <p class="text-muted">{{ p.categoria }}</p>
+                                    <div>
+                                        <p>Taglia: {{ selectedSize?.num }}</p>
+                                      </div>
                                     <div class="select-group d-flex">
                                         <select class="form-select me-3" aria-label="Default select example">
-                                            <option selected>Taglia/misura</option>
+                                            <option selected>Cambia taglia</option>
                                             <option value="1">EU 36</option>
                                             <option value="2">EU 37</option>
                                             <option value="3">EU 38</option>
