--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
                         </li>
                         <li class="submenu-item"><a routerLink="/construction">LabAir Home</a>
                         </li>
-                        <li class="submenu-item"><a routerLink="/construction">Sneakers</a>
+                        <li class="submenu-item"><a routerLink="/construction">Idee regalo LabAir</a>
                         </li>
                         <li class="submenu-item"><a routerLink="/construction">Divise ufficiali</a>
                         </li>
