--- a/src/app/components/sizes/sizes.component.html
+++ b/src/app/components/sizes/sizes.component.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <span *ngIf="errorMessage && !selectedSize" class="text-danger mb-0">{{ errorMessage }}</span>
-    <div id="containerButtons">
+    <div class="containerButtons">
         <button type="button" class="btn btn-dark cart" (click)="addToCart()">Aggiungi al carrello</button>
         <button type="button" class="btn btn-outline-secondary wish">Aggiungi ai preferiti</button>
     </div>
