--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -79,3 +79,15 @@ padding: 20px 20px 10px 20px;
     background-color: #eeeeee;
     border: 1px solid #dfdfdf;
 }
+
+.accordion {
+    border: none;
+}
+
+.accordionButton {
+    border-radius: 25px;
+    background-color: #eeeeee;
+    border: 1px solid #dfdfdf;
+    padding: 10px 20px;
+    margin-left: 1em;
+}
