--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -112,7 +112,7 @@
             <hr>
             <div class="total d-flex justify-content-between">
                 <p>Totale</p>
-                <p class="fw-bold">0</p>
+                <p class="fw-bold">{{total | localCurrency: 'EUR'}}</p>
             </div>
             <hr>
             <div class="containerButtons">
