--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -56,7 +56,7 @@ padding: 20px 20px 10px 20px;
 }
 
 .cart-items-info {
-    width: 100%;
+    width: 80%;
 }
 
 #cart-right-summary {
@@ -90,4 +90,57 @@ padding: 20px 20px 10px 20px;
     border: 1px solid #dfdfdf;
     padding: 10px 20px;
     margin-left: 1em;
+}
+
+@media screen and (max-width: 768px) {
+    #cart-right-summary {
+        width: 200px;
+    }
+
+    .cart-items-info {
+        font-size: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+
+    }
+    .cart-item-price {
+        width: 100%;
+        text-align: right;
+        font-weight: bold;
+        margin-top: 0.5em;
+        padding: .3em 1em .3em 0;
+        background-color: #f5f5f5;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    
+    .wrapper {
+        margin: 2em;
+    }
+    #cart-view {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        font-size: .5rem;
+    }
+
+    #cart-container {
+        margin-top: 29em;
+        border: none;
+    }
+
+
+    #cart-left-container{
+        width: 100%;
+    }
+
+    #cart-right-summary {
+        width: 100%;
+    }
+
+    .cart-item-price {
+        background-color: #ffffff;
+    }
 }
