--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
       <li class="navbar-item"><a routerLink="/construction">ordini e resi</a></li>
       <li class="navbar-item"><a routerLink="/construction">iscriviti</a></li>
       <li class="navbar-item"><a routerLink="/construction">labclub</a></li>
-      <li class="navbar-item"><a routerLink="/construction">accedi</a></li>
+      <li class="navbar-item"><a routerLink="/login">accedi</a></li>
     </ul>
     <input type="checkbox" class="hamburger-icon">
     <label for="hamburger-icon" class="hamburger-menu">
