--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -272,7 +272,7 @@
             <input class="form-control search-input" type="text" [(ngModel)]="query" (keyup.enter)="onChange()" placeholder="Cerca per nome">
         </div>
         <div class="icon-container d-flex">
-            <a href="#" title="accedi">
+            <a routerLink="/login" title="accedi">
                 <div class="login">
                     <i class="bi bi-person-circle"></i>
                 </div>
