--- a/src/app/components/sizes/sizes.component.html
+++ b/src/app/components/sizes/sizes.component.html
@@ -47,8 +47,8 @@
             </div>
         </div>
         <div id="fasciaDown" class="clearfix">
-            <button id="addToCart" (click)="closePopup()" routerLink="/cart">Visualizza carrello ({{ countSelectedSizes() }})</button>
-            <button id="goToPay" (click)="closePopup()">Pagamento</button>
+            <button id="addToCart"  routerLink="/cart">Visualizza carrello ({{ countSelectedSizes() }})</button>
+            <button id="goToPay" routerLink="/login">Pagamento</button>
         </div>
     </section>
 </div>
