--- a/src/app/account/welcome/welcome.component.html
+++ b/src/app/account/welcome/welcome.component.html
@@ -9,6 +9,8 @@
         <ng-container *ngIf="currentUser">
           <p>Benvenuto, <strong>{{currentUser}}</strong> ! Grazie per esserti unito alla LabAir Community.</p>
         </ng-container>
+        <p>Per favore, inserisci i tuoi dati di spedizione per continuare.</p>
+        <button (click)="navigateToDefaultPage()" class="btn btn-primary btn-lg mt-4">Inserisci i tuoi dati</button>
         <router-outlet></router-outlet>
       </div>
     </div>
