--- a/src/app/account/default/default.component.html
+++ b/src/app/account/default/default.component.html
@@ -1,2 +1,22 @@
-<p>Per favore, inserisci i tuoi dati di spedizione per continuare.</p>
-    <button (click)="navigateToShippingForm()" class="btn btn-primary btn-lg mt-4">Inserisci dati spedizione</button>
+<div id="logo" class="m-4">
+    <img src="./assets/images/logo.png" alt="Logo">
+</div>
+<div class="container mt-3">
+    <h3 class="text-center">Pagamento</h3>
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link active" [routerLink]="['shipping-form']">Dati spedizione</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['payment-form']" [class.disabled]="!shippingFormCompleted">Dati pagamento</a>
+        </li>
+      </ul>
+      
+      <div class="tab-content">
+        <router-outlet></router-outlet>
+      </div>
+      <div class="tab-content">
+        <router-outlet></router-outlet>
+      </div>
+      
+</div>
