--- a/src/app/account/welcome/welcome.component.html
+++ b/src/app/account/welcome/welcome.component.html
@@ -10,7 +10,7 @@
           <p>Benvenuto, <strong>{{currentUser}}</strong> ! Grazie per esserti unito alla LabAir Community.</p>
         </ng-container>
         <p>Per favore, inserisci i tuoi dati di spedizione per continuare.</p>
-        <button (click)="navigateToDefaultPage()" class="btn btn-primary btn-lg mt-4">Inserisci i tuoi dati</button>
+        <button (click)="navigateToDefaultPage()" class="btn btn-dark btn-lg mt-4">Inserisci i tuoi dati</button>
         <router-outlet></router-outlet>
       </div>
     </div>
